--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,6 @@ services:
     ports:
       - "4873:4873"
     volumes:
-      # - ./conf:/verdaccio/conf
+      - ./conf:/verdaccio/conf
       - ./storage:/verdaccio/storage
       - ./plugins:/verdaccio/plugins
