updated the docker volume in the dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,8 @@ services:
       - "4873:4873"
     volumes:
       - ./conf:/verdaccio/conf
-      - ./storage:/verdaccio/storage
-      - ./plugins:/verdaccio/plugins
+      - storage:/verdaccio/storage
+      - plugins:/verdaccio/plugins
+volumes:
+  storage:
+  plugins:
